unpackaged/main/default/objects/MDF__c/MDF__c.object-meta.xml
<CustomObject>
    <label>MDF</label>
    <nameField>
        <displayFormat>MDF-{000000}</displayFormat>
        <label>MDF Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDFs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>