unpackaged/main/default/objects/MDF__c/fields/AP_Contact__c.field-meta.xml
<CustomField>
    <fullName>AP_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AP Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MDFs</relationshipLabel>
    <relationshipName>MDFs</relationshipName>
    <type>Lookup</type>
</CustomField>