unpackaged/main/default/objects/MDF__c/fields/Co_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Co_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Sponsor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Partner, Supplier</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MDFs (Co-Sponsor)</relationshipLabel>
    <relationshipName>MDFCoSponsor</relationshipName>
    <type>Lookup</type>
</CustomField>