unpackaged/main/default/objects/MDF__c/fields/Date_Committed__c.field-meta.xml
<CustomField>
    <fullName>Date_Committed__c</fullName>
    <label>Date Committed</label>
    <required>true</required>
    <type>Date</type>
</CustomField>