unpackaged/main/default/objects/MDF__c/fields/Requires_Proof_of_Performance__c.field-meta.xml
<CustomField>
    <fullName>Requires_Proof_of_Performance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Proof of Performance</label>
    <type>Checkbox</type>
</CustomField>