unpackaged/main/default/objects/MDF__c/fields/Total_Amt_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Total_Amt_Allocated__c</fullName>
    <label>Total Amt Allocated</label>
    <summarizedField>MDF_Allocation__c.Amount__c</summarizedField>
    <summaryForeignKey>MDF_Allocation__c.MDF__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>