unpackaged/main/default/objects/MDF__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event Specific</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Reoccurring - Quarterly</fullName>
            </value>
            <value>
                <fullName>Reoccurring - Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>