unpackaged/main/default/objects/MDF__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Date_Committed__c</columns>
    <columns>Amount_Committed__c</columns>
    <columns>Total_Amt_Allocated__c</columns>
    <columns>AP_Contact__c</columns>
    <columns>Invoice_Paid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>